--- a/crates/brk_error/Cargo.toml
+++ b/crates/brk_error/Cargo.toml
@@ -16,7 +16,7 @@ fjall2 = { workspace = true }
 fjall3 = { workspace = true }
 jiff = { workspace = true }
 minreq = { workspace = true }
-sonic-rs = { workspace = true }
+serde_json = { workspace = true }
 tokio = { workspace = true }
 vecdb = { workspace = true }
 zerocopy = { workspace = true }
