--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,8 +58,8 @@ brk_store = { version = "0.0.111", path = "crates/brk_store" }
 brk_types = { version = "0.0.111", path = "crates/brk_types" }
 brk_traversable = { version = "0.0.111", path = "crates/brk_traversable", features = ["derive"] }
 brk_traversable_derive = { version = "0.0.111", path = "crates/brk_traversable_derive" }
-byteview = "=0.6.1"
-# byteview = "~0.8.0"
+# byteview = "=0.6.1"
+byteview = "~0.8.0"
 derive_deref = "1.1.1"
 # fjall2 = { version = "2.11.5", package = "brk_fjall" }
 fjall2 = { path = "../fjall2", package = "brk_fjall" }
@@ -78,10 +78,9 @@ serde = "1.0.228"
 serde_bytes = "0.11.19"
 serde_derive = "1.0.228"
 serde_json = { version = "1.0.145", features = ["float_roundtrip"] }
-sonic-rs = "0.5.6"
 tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
 vecdb = { path = "../seqdb/crates/vecdb", features = ["derive"] }
-# vecdb = { version = "0.3.16", features = ["derive"] }
+# vecdb = { version = "0.3.20", features = ["derive"] }
 zerocopy = { version = "0.8.27", features = ["derive"] }
 
 [workspace.metadata.release]
