--- a/crates/brk_bencher/Cargo.toml
+++ b/crates/brk_bencher/Cargo.toml
@@ -13,3 +13,6 @@ build = "build.rs"
 brk_error = { workspace = true }
 brk_logger = { workspace = true }
 parking_lot = { workspace = true }
+
+[target.'cfg(target_os = "macos")'.dependencies]
+libproc = "0.14"
