--- a/crates/brk_fetcher/Cargo.toml
+++ b/crates/brk_fetcher/Cargo.toml
@@ -15,4 +15,4 @@ brk_logger = { workspace = true }
 brk_types = { workspace = true }
 log = { workspace = true }
 minreq = { workspace = true }
-sonic-rs = { workspace = true }
+serde_json = { workspace = true }
