--- a/crates/brk_server/Cargo.toml
+++ b/crates/brk_server/Cargo.toml
@@ -29,7 +29,8 @@ jiff = { workspace = true }
 log = { workspace = true }
 quick_cache = "0.6.18"
 schemars = { workspace = true }
-sonic-rs = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
 tokio = { workspace = true }
 tower-http = { version = "0.6.6", features = ["compression-full", "trace"] }
 tracing = "0.1.41"
