--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,7 +79,7 @@ serde_bytes = "0.11.19"
 serde_derive = "1.0.228"
 serde_json = { version = "1.0.145", features = ["float_roundtrip"] }
 tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
-vecdb = { path = "../seqdb/crates/vecdb", features = ["derive"] }
+vecdb = { path = "../anydb/crates/vecdb", features = ["derive", "serde_json"] }
 # vecdb = { version = "0.3.20", features = ["derive"] }
 zerocopy = { version = "0.8.27", features = ["derive"] }
 
