--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,8 +64,8 @@ derive_deref = "1.1.1"
 fjall2 = { version = "2.11.8", package = "brk_fjall" }
 # fjall2 = { path = "../fjall2", package = "brk_fjall" }
 # fjall2 = { version = "2.11.2", package = "fjall" }
-# fjall3 = { version = "=3.0.0-pre.5", package = "fjall" }
-fjall3 = { path = "../fjall3", package = "fjall" }
+fjall3 = { version = "3.0.0-rc.0", package = "fjall" }
+# fjall3 = { path = "../fjall3", package = "fjall" }
 # fjall3 = { git = "https://github.com/fjall-rs/fjall.git", rev = "f0bf96c2017b3543eb176012b8eff69c639dff1d", package = "fjall" }
 jiff = "0.2.16"
 log = "0.4.28"
@@ -79,9 +79,9 @@ serde_bytes = "0.11.19"
 serde_derive = "1.0.228"
 serde_json = { version = "1.0.145", features = ["float_roundtrip"] }
 tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
-vecdb = { path = "../anydb/crates/vecdb", features = ["derive", "serde_json"] }
+vecdb = { path = "../anydb/crates/vecdb", features = ["derive", "serde_json", "pco"] }
 # vecdb = { version = "0.3.20", features = ["derive"] }
-zerocopy = { version = "0.8.28", features = ["derive"] }
+zerocopy = { version = "0.8.30", features = ["derive"] }
 
 [workspace.metadata.release]
 shared-version = true
