--- a/crates/brk_computer/Cargo.toml
+++ b/crates/brk_computer/Cargo.toml
@@ -30,3 +30,6 @@ rustc-hash = { workspace = true }
 serde = { workspace = true }
 smallvec = "1.15.1"
 vecdb = { workspace = true }
+
+[dev-dependencies]
+color-eyre = { workspace = true }
