--- a/crates/brk_indexer/Cargo.toml
+++ b/crates/brk_indexer/Cargo.toml
@@ -26,3 +26,6 @@ log = { workspace = true }
 rayon = { workspace = true }
 rustc-hash = { workspace = true }
 vecdb = { workspace = true }
+
+[dev-dependencies]
+color-eyre = { workspace = true }
