--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ inherits = "release"
 [workspace.dependencies]
 aide = { version = "0.16.0-alpha.1", features = ["axum-json", "axum-query"] }
 axum = "0.8.7"
-bitcoin = { version = "0.32.7", features = ["serde"] }
+bitcoin = { version = "0.32.8", features = ["serde"] }
 bitcoincore-rpc = "0.19.0"
 brk_bencher = { version = "0.0.111", path = "crates/brk_bencher" }
 brk_binder = { version = "0.0.111", path = "crates/brk_binder" }
@@ -58,15 +58,12 @@ brk_types = { version = "0.0.111", path = "crates/brk_types" }
 brk_traversable = { version = "0.0.111", path = "crates/brk_traversable", features = ["pco", "derive"] }
 brk_traversable_derive = { version = "0.0.111", path = "crates/brk_traversable_derive" }
 byteview = "=0.6.1"
-# byteview = "~0.8.0"
+# byteview = "0.9.1"
 color-eyre = "0.6.5"
 derive_deref = "1.1.1"
 fjall2 = { version = "2.11.8", package = "brk_fjall" }
 # fjall2 = { path = "../fjall2", package = "brk_fjall" }
-# fjall2 = { version = "2.11.2", package = "fjall" }
-fjall3 = { version = "3.0.0-rc.4", package = "fjall" }
-# fjall3 = { path = "../fjall3", package = "fjall" }
-# fjall3 = { git = "https://github.com/fjall-rs/fjall.git", rev = "f0bf96c2017b3543eb176012b8eff69c639dff1d", package = "fjall" }
+fjall3 = { version = "3.0.0-rc.5", package = "fjall" }
 jiff = "0.2.16"
 log = "0.4.29"
 minreq = { version = "2.14.1", features = ["https", "serde_json"] }
