--- a/crates/brk_store/Cargo.toml
+++ b/crates/brk_store/Cargo.toml
@@ -13,8 +13,8 @@ build = "build.rs"
 [dependencies]
 brk_error = { workspace = true }
 brk_types = { workspace = true }
-byteview6 = { version = "=0.6.1", package = "byteview" }
-byteview8 = { version = "~0.8.0", package = "byteview" }
+byteview_f2 = { version = "=0.6.1", package = "byteview" }
+byteview_f3 = { version = "0.9.1", package = "byteview" }
 fjall2 = { workspace = true }
 fjall3 = { workspace = true }
 rustc-hash = { workspace = true }
