--- a/crates/brk_cli/Cargo.toml
+++ b/crates/brk_cli/Cargo.toml
@@ -31,6 +31,7 @@ serde = { workspace = true }
 tokio = { workspace = true }
 toml = "0.9.8"
 zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
+rlimit = "0.10.2"
 
 [[bin]]
 name = "brk"
