--- a/crates/brk_cli/Cargo.toml
+++ b/crates/brk_cli/Cargo.toml
@@ -16,7 +16,7 @@ brk_error = { workspace = true }
 brk_fetcher = { workspace = true }
 brk_indexer = { workspace = true }
 brk_iterator = { workspace = true }
-brk_monitor = { workspace = true }
+brk_mempool = { workspace = true }
 brk_query = { workspace = true }
 brk_logger = { workspace = true }
 brk_reader = { workspace = true }
