--- a/crates/brk_error/Cargo.toml
+++ b/crates/brk_error/Cargo.toml
@@ -15,5 +15,6 @@ fjall = { workspace = true }
 jiff = { workspace = true }
 minreq = { workspace = true }
 serde_json = { workspace = true }
+thiserror = "2.0"
 tokio = { workspace = true }
 vecdb = { workspace = true }
