--- a/crates/brk_indexer/Cargo.toml
+++ b/crates/brk_indexer/Cargo.toml
@@ -29,4 +29,4 @@ vecdb = { workspace = true }
 
 [dev-dependencies]
 color-eyre = { workspace = true }
-mimalloc = { version = "0.1.48", features = ["v3"] }
+mimalloc = { workspace = true }
