--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,8 +65,6 @@ byteview = "0.9.1"
 color-eyre = "0.6.5"
 derive_deref = "1.1.1"
 fjall = "3.0.0-rc.6"
-# fjall3 = { path = "../fjall3", package = "fjall" }
-# fjall3 = { git = "https://github.com/fjall-rs/fjall.git", rev = "434979ef59d8fd2b36b91e6ff759a36d19a397ee", package = "fjall" }
 jiff = "0.2.16"
 log = "0.4.29"
 mimalloc = { version = "0.1.48", features = ["v3"] }
@@ -81,8 +79,8 @@ serde_derive = "1.0.228"
 serde_json = { version = "1.0.145", features = ["float_roundtrip"] }
 smallvec = "1.15.1"
 tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
-vecdb = { version = "0.4.3", features = ["derive", "serde_json", "pco"] }
-# vecdb = { path = "../anydb/crates/vecdb", features = ["derive", "serde_json", "pco"] }
+# vecdb = { version = "0.4.3", features = ["derive", "serde_json", "pco"] }
+vecdb = { path = "../anydb/crates/vecdb", features = ["derive", "serde_json", "pco", "schemars"] }
 # vecdb = { git = "https://github.com/anydb-rs/anydb", features = ["derive", "serde_json", "pco"] }
 
 [workspace.metadata.release]
