--- a/crates/brk_binder/Cargo.toml
+++ b/crates/brk_binder/Cargo.toml
@@ -11,6 +11,7 @@ build = "build.rs"
 [dependencies]
 brk_query = { workspace = true }
 brk_types = { workspace = true }
+oas3 = "0.20"
 schemars = { workspace = true }
 serde_json = { workspace = true }
 vecdb = { workspace = true }
