bencher: publish = true

--- a/crates/brk/Cargo.toml
+++ b/crates/brk/Cargo.toml
@@ -10,6 +10,7 @@ build = "build.rs"
 
 [features]
 full = [
+    "bencher",
     "binder",
     "bundler",
     "computer",
@@ -29,6 +30,7 @@ full = [
     "traversable",
     "types",
 ]
+bencher = ["brk_bencher"]
 binder = ["brk_binder"]
 bundler = ["brk_bundler"]
 computer = ["brk_computer"]
@@ -49,6 +51,7 @@ traversable = ["brk_traversable"]
 types = ["brk_types"]
 
 [dependencies]
+brk_bencher = { workspace = true, optional = true }
 brk_binder = { workspace = true, optional = true }
 brk_bundler = { workspace = true, optional = true }
 brk_computer = { workspace = true, optional = true }
