--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,7 +66,7 @@ byteview = "0.9.1"
 color-eyre = "0.6.5"
 derive_deref = "1.1.1"
 fjall = "3.0.0-rc.6"
-jiff = "0.2.16"
+jiff = "0.2.17"
 log = "0.4.29"
 mimalloc = { version = "0.1.48", features = ["v3"] }
 minreq = { version = "2.14.1", features = ["https", "serde_json"] }
@@ -80,8 +80,8 @@ serde_derive = "1.0.228"
 serde_json = { version = "1.0.147", features = ["float_roundtrip"] }
 smallvec = "1.15.1"
 tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
-vecdb = { version = "0.4.6", features = ["derive", "serde_json", "pco"] }
-# vecdb = { path = "../anydb/crates/vecdb", features = ["derive", "serde_json", "pco", "schemars"] }
+# vecdb = { version = "0.4.6", features = ["derive", "serde_json", "pco"] }
+vecdb = { path = "../anydb/crates/vecdb", features = ["derive", "serde_json", "pco", "schemars"] }
 # vecdb = { git = "https://github.com/anydb-rs/anydb", features = ["derive", "serde_json", "pco"] }
 
 [workspace.metadata.release]
