--- a/crates/brk_mcp/Cargo.toml
+++ b/crates/brk_mcp/Cargo.toml
@@ -9,14 +9,15 @@ repository.workspace = true
 build = "build.rs"
 
 [dependencies]
-aide = { workspace = true }
-brk_query = { workspace = true }
+axum = { workspace = true }
 brk_rmcp = { version = "0.8.0", features = [
     "transport-worker",
     "transport-streamable-http-server",
 ] }
-brk_types = { workspace = true }
 log = { workspace = true }
+minreq = { workspace = true }
+schemars = { workspace = true }
+serde = { workspace = true }
 serde_json = { workspace = true }
 
 [package.metadata.cargo-machete]
