--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,11 +78,11 @@ schemars = "1.2.0"
 serde = "1.0.228"
 serde_bytes = "0.11.19"
 serde_derive = "1.0.228"
-serde_json = { version = "1.0.147", features = ["float_roundtrip"] }
+serde_json = { version = "1.0.148", features = ["float_roundtrip"] }
 smallvec = "1.15.1"
 tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
-# vecdb = { version = "0.4.6", features = ["derive", "serde_json", "pco"] }
-vecdb = { path = "../anydb/crates/vecdb", features = ["derive", "serde_json", "pco", "schemars"] }
+vecdb = { version = "0.5.0", features = ["derive", "serde_json", "pco"] }
+# vecdb = { path = "../anydb/crates/vecdb", features = ["derive", "serde_json", "pco", "schemars"] }
 # vecdb = { git = "https://github.com/anydb-rs/anydb", features = ["derive", "serde_json", "pco"] }
 
 [workspace.metadata.release]
