--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ aide = { version = "0.16.0-alpha.1", features = ["axum-json", "axum-query"] }
 axum = "0.8.8"
 bitcoin = { version = "0.32.8", features = ["serde"] }
 bitcoincore-rpc = "0.19.0"
+brk_alloc = { version = "0.1.0-alpha.1", path = "crates/brk_alloc" }
 brk_bencher = { version = "0.1.0-alpha.1", path = "crates/brk_bencher" }
 brk_binder = { version = "0.1.0-alpha.1", path = "crates/brk_binder" }
 brk_bundler = { version = "0.1.0-alpha.1", path = "crates/brk_bundler" }
@@ -69,7 +70,6 @@ derive_deref = "1.1.1"
 fjall = { path = "../fjall" }
 jiff = "0.2.17"
 log = "0.4.29"
-mimalloc = { version = "0.1.48", features = ["v3"] }
 minreq = { version = "2.14.1", features = ["https", "serde_json"] }
 parking_lot = "0.12.5"
 rayon = "1.11.0"
