--- a/crates/brk_grouper/Cargo.toml
+++ b/crates/brk_grouper/Cargo.toml
@@ -14,3 +14,4 @@ brk_types = { workspace = true }
 brk_traversable = { workspace = true }
 vecdb = { workspace = true }
 rayon = { workspace = true }
+serde = { workspace = true }
