--- a/crates/brk_client/Cargo.toml
+++ b/crates/brk_client/Cargo.toml
@@ -9,6 +9,7 @@ repository.workspace = true
 build = "build.rs"
 
 [dependencies]
+brk_grouper = { workspace = true }
 brk_types = { workspace = true }
 minreq = { workspace = true }
 serde = { workspace = true }
