--- a/crates/brk_client/Cargo.toml
+++ b/crates/brk_client/Cargo.toml
@@ -15,3 +15,4 @@ brk_cohort = { workspace = true }
 brk_types = { workspace = true }
 minreq = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
