--- a/crates/brk_server/Cargo.toml
+++ b/crates/brk_server/Cargo.toml
@@ -7,6 +7,7 @@ license.workspace = true
 homepage.workspace = true
 repository.workspace = true
 build = "build.rs"
+include = ["src/**/*", "website/**/*", "examples/**/*", "build.rs", "Cargo.toml", "README.md"]
 
 [dependencies]
 aide = { workspace = true }
