--- a/crates/brk_bindgen/Cargo.toml
+++ b/crates/brk_bindgen/Cargo.toml
@@ -14,3 +14,4 @@ brk_types = { workspace = true }
 oas3 = "0.20"
 serde = { workspace = true }
 serde_json = { workspace = true }
+tracing = { workspace = true }
