--- a/crates/brk_server/Cargo.toml
+++ b/crates/brk_server/Cargo.toml
@@ -6,8 +6,7 @@ edition.workspace = true
 license.workspace = true
 homepage.workspace = true
 repository.workspace = true
-build = "build.rs"
-include = ["src/**/*", "website/**/*", "examples/**/*", "build.rs", "Cargo.toml", "README.md"]
+include = ["src/**/*", "website/**/*", "examples/**/*", "Cargo.toml", "README.md"]
 
 [dependencies]
 aide = { workspace = true }
@@ -25,6 +24,8 @@ brk_types = { workspace = true }
 brk_traversable = { workspace = true }
 derive_more = { workspace = true }
 include_dir = "0.7"
+importmap = { path = "../../../importmap", features = ["embedded"] }
+# importmap = { version = "0.3", features = ["embedded"] }
 vecdb = { workspace = true }
 jiff = { workspace = true }
 quick_cache = "0.6.18"
@@ -34,13 +35,7 @@ serde_json = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
 tower-http = { version = "0.6.8", features = ["catch-panic", "compression-full", "cors", "normalize-path", "timeout", "trace"] }
-
-[build-dependencies]
-# importmap = { path = "../../../importmap" }
-importmap = "0.2"
+tower-layer = "0.3"
 
 [dev-dependencies]
 brk_mempool = { workspace = true }
-
-[package.metadata.cargo-machete]
-ignored = ["importmap"]
