--- a/crates/brk_cli/Cargo.toml
+++ b/crates/brk_cli/Cargo.toml
@@ -8,9 +8,10 @@ homepage.workspace = true
 repository.workspace = true
 
 [dependencies]
+anyhow = "1.0"
 brk_alloc = { workspace = true }
 brk_computer = { workspace = true }
-brk_error = { workspace = true }
+brk_error = { workspace = true, features = ["tokio", "vecdb"] }
 brk_fetcher = { workspace = true }
 brk_indexer = { workspace = true }
 brk_iterator = { workspace = true }
@@ -20,8 +21,8 @@ brk_query = { workspace = true }
 brk_reader = { workspace = true }
 brk_rpc = { workspace = true }
 brk_server = { workspace = true }
-clap = { version = "4.5.54", features = ["derive", "string"] }
-color-eyre = { workspace = true }
+brk_types = { workspace = true }
+lexopt = "0.3"
 tracing = { workspace = true }
 serde = { workspace = true }
 tokio = { workspace = true }
