--- a/crates/brk_cohort/Cargo.toml
+++ b/crates/brk_cohort/Cargo.toml
@@ -8,7 +8,7 @@ homepage.workspace = true
 repository.workspace = true
 
 [dependencies]
-brk_error = { workspace = true }
+brk_error = { workspace = true, features = ["vecdb"] }
 brk_types = { workspace = true }
 brk_traversable = { workspace = true }
 vecdb = { workspace = true }
