--- a/crates/brk_computer/Cargo.toml
+++ b/crates/brk_computer/Cargo.toml
@@ -9,7 +9,7 @@ repository.workspace = true
 
 [dependencies]
 bitcoin = { workspace = true }
-brk_error = { workspace = true }
+brk_error = { workspace = true, features = ["vecdb"] }
 brk_fetcher = { workspace = true }
 brk_cohort = { workspace = true }
 brk_indexer = { workspace = true }
