--- a/crates/brk_fetcher/Cargo.toml
+++ b/crates/brk_fetcher/Cargo.toml
@@ -8,7 +8,7 @@ homepage.workspace = true
 repository.workspace = true
 
 [dependencies]
-brk_error = { workspace = true }
+brk_error = { workspace = true, features = ["minreq", "serde_json"] }
 brk_logger = { workspace = true }
 brk_types = { workspace = true }
 tracing = { workspace = true }
