--- a/crates/brk_indexer/Cargo.toml
+++ b/crates/brk_indexer/Cargo.toml
@@ -9,7 +9,7 @@ repository.workspace = true
 
 [dependencies]
 bitcoin = { workspace = true }
-brk_error = { workspace = true }
+brk_error = { workspace = true, features = ["fjall", "vecdb"] }
 brk_cohort = { workspace = true }
 brk_iterator = { workspace = true }
 brk_logger = { workspace = true }
