--- a/crates/brk_query/Cargo.toml
+++ b/crates/brk_query/Cargo.toml
@@ -13,7 +13,7 @@ tokio = ["dep:tokio"]
 [dependencies]
 bitcoin = { workspace = true }
 brk_computer = { workspace = true }
-brk_error = { workspace = true }
+brk_error = { workspace = true, features = ["jiff", "vecdb"] }
 brk_indexer = { workspace = true }
 brk_mempool = { workspace = true }
 brk_reader = { workspace = true }
