--- a/crates/brk_rpc/Cargo.toml
+++ b/crates/brk_rpc/Cargo.toml
@@ -10,7 +10,7 @@ repository.workspace = true
 [dependencies]
 bitcoin = { workspace = true }
 bitcoincore-rpc = { workspace = true }
-brk_error = { workspace = true }
+brk_error = { workspace = true, features = ["bitcoincore-rpc"] }
 brk_logger = { workspace = true }
 brk_types = { workspace = true }
 tracing = { workspace = true }
