--- a/crates/brk_store/Cargo.toml
+++ b/crates/brk_store/Cargo.toml
@@ -10,7 +10,7 @@ homepage.workspace = true
 repository.workspace = true
 
 [dependencies]
-brk_error = { workspace = true }
+brk_error = { workspace = true, features = ["fjall"] }
 brk_types = { workspace = true }
 byteview = { workspace = true }
 fjall = { workspace = true }
