--- a/crates/brk_types/Cargo.toml
+++ b/crates/brk_types/Cargo.toml
@@ -9,12 +9,11 @@ repository.workspace = true
 
 [dependencies]
 bitcoin = { workspace = true }
-brk_error = { workspace = true }
+brk_error = { workspace = true, features = ["bitcoin", "jiff", "serde_json", "vecdb"] }
 byteview = { workspace = true }
 derive_more = { workspace = true }
 itoa = "1.0.17"
 jiff = { workspace = true }
-num_enum = "0.7.5"
 rapidhash = "4.2.1"
 ryu = "1.0.22"
 schemars = { workspace = true }
