query: fix features

--- a/crates/brk_query/Cargo.toml
+++ b/crates/brk_query/Cargo.toml
@@ -8,7 +8,7 @@ homepage.workspace = true
 repository.workspace = true
 
 [features]
-tokio = ["dep:tokio"]
+tokio = ["dep:tokio", "brk_error/tokio"]
 
 [dependencies]
 bitcoin = { workspace = true }
