--- a/crates/brk_computer/Cargo.toml
+++ b/crates/brk_computer/Cargo.toml
@@ -32,5 +32,6 @@ vecdb = { workspace = true }
 
 [dev-dependencies]
 brk_alloc = { workspace = true }
+plotters = "0.3"
 brk_bencher = { workspace = true }
 color-eyre = { workspace = true }
