--- a/crates/brk_server/Cargo.toml
+++ b/crates/brk_server/Cargo.toml
@@ -6,7 +6,6 @@ edition.workspace = true
 license.workspace = true
 homepage.workspace = true
 repository.workspace = true
-include = ["src/**/*", "website/**/*", "examples/**/*", "Cargo.toml", "README.md"]
 
 [dependencies]
 aide = { workspace = true }
@@ -22,10 +21,8 @@ brk_reader = { workspace = true }
 brk_rpc = { workspace = true }
 brk_types = { workspace = true }
 brk_traversable = { workspace = true }
+brk_website = { workspace = true }
 derive_more = { workspace = true }
-include_dir = "0.7"
-# importmap = { path = "../../../importmap", features = ["embedded"] }
-importmap = { version = "0.3.0", features = ["embedded"] }
 vecdb = { workspace = true }
 jiff = { workspace = true }
 quick_cache = "0.6.18"
@@ -34,8 +31,8 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
-tower-http = { version = "0.6.8", features = ["catch-panic", "compression-br", "compression-gzip", "compression-zstd", "cors", "normalize-path", "timeout", "trace"] }
-tower-layer = "0.3"
+tower-http = { workspace = true }
+tower-layer = { workspace = true }
 
 [dev-dependencies]
 brk_mempool = { workspace = true }
