--- a/crates/brk_website/Cargo.toml
+++ b/crates/brk_website/Cargo.toml
@@ -11,7 +11,8 @@ include = ["src/**/*", "website/**/*", "examples/**/*", "Cargo.toml", "README.md
 [dependencies]
 axum = { workspace = true }
 include_dir = "0.7"
-importmap = { version = "0.3.1", features = ["embedded"] }
+# importmap = { path = "../../../importmap", features = ["embedded"] }
+importmap = { version = "0.4.0", features = ["embedded"] }
 tracing = { workspace = true }
 
 [dev-dependencies]
