--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,7 @@ derive_more = { version = "2.1.1", features = ["deref", "deref_mut"] }
 fjall = "3.0.1"
 jiff = { version = "0.2.18", features = ["perf-inline", "tz-system"], default-features = false }
 minreq = { version = "2.14.1", features = ["https", "json-using-serde"] }
+owo-colors = "4.2.3"
 parking_lot = "0.12.5"
 rayon = "1.11.0"
 rustc-hash = "2.1.1"
