--- a/crates/brk_website/Cargo.toml
+++ b/crates/brk_website/Cargo.toml
@@ -13,6 +13,7 @@ axum = { workspace = true }
 include_dir = "0.7"
 # importmap = { path = "../../../importmap", features = ["embedded"] }
 importmap = { version = "0.4.0", features = ["embedded"] }
+serde = { workspace = true }
 tracing = { workspace = true }
 
 [dev-dependencies]
