--- a/packages/brk_client/pyproject.toml
+++ b/packages/brk_client/pyproject.toml
@@ -3,7 +3,7 @@ name = "brk-client"
 version = "0.1.0-alpha.6"
 description = "Python client for the Bitcoin Research Kit"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.9"
 license = "MIT"
 keywords = ["bitcoin", "blockchain", "analytics", "on-chain"]
 classifiers = [
@@ -11,6 +11,8 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
