--- a/crates/brk_playground/Cargo.toml
+++ b/crates/brk_playground/Cargo.toml
@@ -8,6 +8,9 @@ homepage.workspace = true
 repository.workspace = true
 publish = false
 
+[package.metadata.release]
+release = false
+
 [dependencies]
 brk_computer = { workspace = true }
 brk_error = { workspace = true }
