--- a/packages/brk_client/pyproject.toml
+++ b/packages/brk_client/pyproject.toml
@@ -1,13 +1,13 @@
 [project]
 name = "brk-client"
-version = "0.1.0-alpha.6"
+version = "0.1.0-beta.0"
 description = "Python client for the Bitcoin Research Kit"
 readme = "README.md"
 requires-python = ">=3.9"
 license = "MIT"
 keywords = ["bitcoin", "blockchain", "analytics", "on-chain"]
 classifiers = [
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
