--- a/crates/brk_types/Cargo.toml
+++ b/crates/brk_types/Cargo.toml
@@ -9,13 +9,15 @@ repository.workspace = true
 
 [dependencies]
 bitcoin = { workspace = true }
-brk_error = { workspace = true, features = ["bitcoin", "jiff", "serde_json", "vecdb"] }
+brk_error = { workspace = true, features = ["bitcoin", "jiff", "pco", "serde_json", "vecdb"] }
 byteview = { workspace = true }
 derive_more = { workspace = true }
 indexmap = { workspace = true }
 itoa = "1.0.17"
 jiff = { workspace = true }
+pco = { workspace = true }
 rapidhash = "4.2.1"
+rustc-hash = { workspace = true }
 ryu = "1.0.22"
 schemars = { workspace = true }
 serde = { workspace = true }
